--- a/ShareLesson-web/pom.xml
+++ b/ShareLesson-web/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>cors-filter</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <!--引入pageHelper分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
