--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
                 <artifactId>spring-data-redis</artifactId>
                 <version>${spring.redis.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.28</version>
+            </dependency>
 
             <!-- ftpclient -->
             <dependency>
