--- a/ShareLesson-web/src/main/resources/resource/db.properties
+++ b/ShareLesson-web/src/main/resources/resource/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://111.231.1.101:3306/share_class?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://111.231.1.101:3306/share_class?useUnicode=true&characterEncoding=utf8
 jdbc.username=souvc
 jdbc.password=abc123
