修改图片服务器

--- a/ShareLesson-web/src/main/resources/resource/vsftpd.properties
+++ b/ShareLesson-web/src/main/resources/resource/vsftpd.properties
@@ -12,7 +12,7 @@
 #private String filePath;
 ftpclient.host=39.96.207.238
 ftpclient.port = 21
-ftpclient.username = ftpuser
-ftpclient.password = ftpuser
-ftpclient.basePath = /home/ftpuser
+ftpclient.username = ftpuser2
+ftpclient.password = ftpuser2
+ftpclient.basePath = /home/ftpuser2
 ftpclient.filepath = /
