--- a/ShareLesson-service/pom.xml
+++ b/ShareLesson-service/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>commons-net</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.6.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
