--- a/ShareLesson-web/pom.xml
+++ b/ShareLesson-web/pom.xml
@@ -109,6 +109,12 @@
             <version>2.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.6.0.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
