--- a/ShareLesson-web/src/main/resources/resource/redis.properties
+++ b/ShareLesson-web/src/main/resources/resource/redis.properties
@@ -1,16 +1,8 @@
 #redis settings
-redis.minIdle=5
-redis.maxIdle=10
-redis.maxTotal=50
-redis.maxWaitMillis=1500
-redis.testOnBorrow=true
-redis.numTestsPerEvictionRun=1024
-redis.timeBetweenEvictionRunsMillis=30000
-redis.minEvictableIdleTimeMillis=1800000
-redis.softMinEvictableIdleTimeMillis=10000
-redis.testWhileIdle=true
-redis.blockWhenExhausted=false
+redis.pool.maxTotal=80
+redis.pool.maxIdle=50
+redis.pool.minIdle=20
 
 #redisConnectionFactory settings
-redis.host=120.77.147.222
-redis.port=6379
+redis.conn.hostName=120.77.147.222
+redis.conn.port=6379
